# mobfot

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  question.yml
.github/workflows/: dependabot-auto-merge.yml  pypi-publish.yml  python-ci.yml
css/: extra.css
docs/: index.md  reference.md
mobfot/: __init__.py  client.py
pymob/: __init__.py  client.py
reference/: index.html
search/: search_index.json
tests/features/: client.feature  environment.py
tests/features/steps/: client_steps.py
