[tool.black]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobfot"
description = "A Python wrapper around the unofficial FotMob API"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
  { name = "Brian Greenwood" },
]
keywords = [
   	"fotmob",
    "soccer",
    "api",
    "football"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"requests==2.28.1",
	"CacheControl==0.12.11"
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "isort",
    "behave",
    "reformat-gherkin",
    "types-requests"
]

[project.urls]
Homepage = "https://github.com/bgrnwd/mobfot"

[tool.isort]
atomic = true
line_length = 88
skip_gitignore = true

[tool.setuptools.dynamic]
version = {attr = "mobfot.client.VERSION"}
readme = {file = ["README.md"]}

[[tool.mypy.overrides]]
module = "cachecontrol.*"
ignore_missing_imports = true
