[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobfot"
description = "An unofficial Python client for the FotMob API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [{ name = "Brian Greenwood" }]
keywords = ["fotmob", "soccer", "api", "football"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31.0", "CacheControl>=0.13.1"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "ruff",
  "behave",
  "mypy",
  "reformat-gherkin",
  "types-requests",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
]

[project.urls]
homepage = "https://bgrnwd.com/mobfot/"
repository = "https://github.com/bgrnwd/mobfot"

[tool.ruff]
lint.ignore = ["F401"]

[tool.setuptools.dynamic]
version = { attr = "mobfot.client.VERSION" }

[[tool.mypy.overrides]]
module = "cachecontrol.*"
ignore_missing_imports = true
